# py-vuln-scan

./: Cargo.toml  README.md  code_analysis.json  install.sh  result.json  vuln_chains.json  vulns.json
.github/workflows/: release.yml
src/: deps_resolver.rs  error.rs  http.rs  lib.rs  main.rs  osv.rs  parsers.rs  schemas.rs  tui.rs
src/dep_graph/: graph.rs  graph_builder.rs  mod.rs  nested_graph.rs
src/deps_resolver/: mod.rs  parsers.rs  provider.rs
src/deps_resolver/parsers/: mod.rs
src/deps_resolver/pypi/: client.rs  schemas.rs
src/osv/: mod.rs  schemas.rs
src/reachability_analysis/: mod.rs  pipeline.rs
src/reachability_analysis/code_analyser/: analyzer.rs
src/reachability_analysis/pipeline/: mod.rs
src/reachability_analysis/pypi_http/: client.rs  mod.rs
src/reachability_analysis/source_code_fetcher/: client.rs  mod.rs  schemas.rs
src/tui/: mod.rs
