[package]
name = "pypi-scanner"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
crossterm = "0.29.0"
cvss = "2.2.0"
futures = "0.3.32"
pep508_rs = "0.9.2"
pubgrub = "0.3.0"
ratatui = "0.30.0"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2"
tokio = { version = "1.51.0", features = ["full"] }
version-ranges = "0.1.2"
